fixed flickering in statistics page when navigating

--- a/app/src/general/prominent-header.styl
+++ b/app/src/general/prominent-header.styl
@@ -3,7 +3,7 @@
   padding-top 6em
   background-color color_pomodoro
   background linear-gradient(to right bottom,rgba(color_pomodoro, 95%) 0, rgba(color_orange, 70%) 95%)
-  margin-top -6rem
+  margin-top -5rem
   padding-left 0.5em
   padding-right @padding-left
   padding-bottom @padding-left
