--- a/app/src/pages/Statistics.styl
+++ b/app/src/pages/Statistics.styl
@@ -11,3 +11,6 @@
   background-size cover
   background-repeat no-repeat
 
+
+.content
+  min-height 20em
